cluster/manifests/embedding-retrieval/overlays/dev/qdrant/peer_authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: qdrant
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: qdrant
  mtls:
    mode: STRICT
  portLevelMtls:
    "6335":
      mode: PERMISSIVE # p2p
